apps/jellyfin/base/sts.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: jellyfin
spec:
  persistentVolumeClaimRetentionPolicy:
    whenDeleted: Retain
    whenScaled: Retain
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: jellyfin
      app.kubernetes.io/name: jellyfin
  serviceName: jellyfin
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: jellyfin
        app.kubernetes.io/name: jellyfin
    spec:
      containers:
        - name: jellyfin
          image: jellyfin
          resources:
            requests:
              cpu: 49m
              memory: 1484Mi
          livenessProbe:
            failureThreshold: 10
            httpGet:
              path: /health
              port: http
            initialDelaySeconds: 600
            periodSeconds: 120
            timeoutSeconds: 30
          ports:
            - name: http
              containerPort: 8096
            - name: discovery
              containerPort: 7359
              protocol: UDP
          readinessProbe:
            failureThreshold: 5
            httpGet:
              path: /health
              port: http
            initialDelaySeconds: 60
            periodSeconds: 30
            timeoutSeconds: 10
          startupProbe:
            failureThreshold: 480
            httpGet:
              path: /health
              port: http
            periodSeconds: 15
            timeoutSeconds: 10
          volumeMounts:
            - name: cache
              mountPath: /cache
            - name: config
              mountPath: /config
      securityContext:
        fsGroup: 1000
      volumes:
        - name: startup-config
          secret:
            secretName: jellyfin
  volumeClaimTemplates:
    - metadata:
        name: cache
      spec:
        resources:
          requests:
            storage: 16Gi
        storageClassName: local-path
        volumeMode: Filesystem
        accessModes:
          - ReadWriteOncePod
    - metadata:
        name: config
      spec:
        resources:
          requests:
            storage: 32Gi
        storageClassName: longhorn-standard
        volumeMode: Filesystem
        accessModes:
          - ReadWriteOncePod
