apps/jellyfin/base/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: jellyfin
spec:
  sessionAffinity: ClientIP
  ports:
    - name: http
      appProtocol: http
      port: 8096
      targetPort: http
  selector:
    app.kubernetes.io/instance: jellyfin
    app.kubernetes.io/name: jellyfin
